bakerydemo/static/css/main.css
/* ... */
.homepage .streamfield-column p:first-child a {
  text-decoration-skip-ink: none;
  text-decoration-thickness: 3px;
  text-underline-offset: 4px;
}

.homepage .streamfield-column p {
  font-size: 0.875rem;
  line-height: 1.57;
}

.homepage .streamfield-column p:last-child {
  margin-bottom: 0;
}

@media (min-width: 768px) {
  .homepage .streamfield-column p {
    font-size: var(--font-md);
    line-height: 1.55;
  }
}

@media (min-width: 992px) {
  .homepage .streamfield-column {
    padding: 140px 0;
  }

  .homepage .streamfield-column p:first-child {
    font-size: 3.75rem;
    line-height: 1.07;
    margin-bottom: 60px;
  }
}

/* #endregion */

/* #region -- Promo Section */
.homepage .promo-row {
  padding: 40px 0 80px;
}

@media (min-width: 768px) {
  .homepage .promo-row {
    padding-top: 80px;
    margin-right: -45px;
  }
}

.homepage .promo h2 {
  margin-top: 0;
  margin-bottom: 20px;
  color: var(--white);
}

.homepage .promo p,
.homepage .promo li {
  color: var(--white);
}

.homepage .promo a {
  color: var(--white);
  text-decoration: underline;
}

.homepage .promo {
  background: var(--light-brown);
  height: 100%;
  padding: 60px 40px;
  margin-top: 40px;
  margin-bottom: 100px;
}

.homepage .promo-text {
  padding: 0;
}

.homepage .promo figure img {
  margin: 40px 0 -200px;
  width: 100%;
  height: auto;
}

@media (min-width: 768px) {
  .homepage .promo {
    margin-top: -180px;
    margin-right: -120px;
    padding: 180px 60px 40px;
  }

  .homepage .promo figure img {
    width: calc(100% + 60px);
    height: auto;
    margin-right: -60px;
    margin-bottom: -280px;
    padding-top: 20px;
  }

  .homepage .promo p {
    font-size: 1.25rem;
    line-height: 1.35;
  }
}

/* #endregion */

/* #region -- Featured Cards Section -- */
.homepage .featured-cards__list {
  list-style: none;
  padding-left: 0;
}

.homepage .featured-cards__title {
  margin-top: 0;
  margin-bottom: 40px;
}

.homepage .featured-cards__link {
  display: flex;
  flex-direction: row;
  font-family: var(--font--primary);
  margin: 0 auto;
  width: max-content;
  font-size: var(--font-md);
  line-height: 1.28;
}

.homepage .featured-cards__chevron-icon {
  margin-left: 8px;
  width: 8px;
  height: 22px;
  transition: transform ease 0.1s;
}

.homepage .featured-cards__link:hover {
  text-decoration: underline;
}

.homepage .featured-cards__link:hover .featured-cards__chevron-icon {
  transform: translateX(5px);
}

.homepage .featured-cards__link:hover .featured-cards__chevron-icon path {
  fill: var(--dark-orange);
}

@media (min-width: 768px) {
  .homepage .featured-cards {
    padding-right: 50px;
  }

  .homepage .featured-cards__link {
    font-size: 1.5rem;
    line-height: 30px;
    margin: unset;
  }

  .homepage .featured-cards__chevron-icon {
    width: 12px;
    height: 28px;
    align-self: center;
  }
}

/* #endregion */

/* #region -- Location Section -- */
.homepage .locations-section {
  padding: 40px 0 20px;
  text-align: center;
}

.homepage .locations-section__title {
  color: var(--dark);
  font-style: normal;
  font-weight: 400;
  font-size: 2.375rem;
  line-height: 1.16;
  margin-bottom: 40px;
}

@media (min-width: 768px) {
  .homepage .locations-section {
    text-align: left;
    padding: 120px 0 160px;
  }

  .homepage .locations-section__title {
    font-size: 3.75rem;
    line-height: 1.07;

    /* Aligns title with below cards */
    padding-left: 10px;
  }
}

/* #endregion */

/* #region -- Blog Section -- */
.homepage .blog-section {
  padding: 80px 20px 100px;
  text-align: center;
}

.homepage .blog-section__background {
  background-color: var(--cream);
}

.homepage .blog-section__title {
  color: var(--dark-brown);
  font-weight: 400;
  font-size: 2.375rem;
  line-height: 1.16;
  margin-bottom: 60px;
  margin-top: 0;
}

.homepage .blog-section__grid {
  display: grid;
  gap: 10px;
  grid-template-columns: 1fr;
}

@media (min-width: 566px) {
  .homepage .blog-section__grid {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width: 768px) {
  .homepage .blog-section {
    padding: 90px 0 110px;
  }
}

@media (min-width: 966px) {
  .homepage .blog-section__grid {
    grid-template-columns: 1fr 1fr 1fr;
  }

  .homepage .blog-section__title {
    margin-bottom: 90px;
    font-size: 7.5rem;
    line-height: 1.21;
  }
}

/* #endregion */

/* Miscellaneous helper styles */

/* No gutters */
.row.no-gutters {
  margin-right: 0;
  margin-left: 0;
}

@media (max-width: 970px) {
  .row.no-gutters {
    display: block;
  }
}

.row.no-gutters > [class^='col-'],
.row.no-gutters > [class*=' col-'] {
  padding-right: 0;
  padding-left: 0;
}

/* Bootstrap Equal height rows */
.row-eq-height {
  display: flex;
  flex-wrap: wrap;
}

@media (min-width: 992px) {
  .hidden-md-up {
    display: none;
  }
}

@media (max-width: 991px) {
  .hidden-md-down {
    display: none;
  }
}

/* From Wagtail core */
.richtext-image.left {
  float: left;
  width: 50%;
}

.richtext-image.right {
  float: right;
  width: 50%;
}

/* ---- Component Styles ---- */

/* #region ---- Picture Card ---- */
.picture-card {
  position: relative;
}

.picture-card__link:hover .picture-card__image img {
  transform: scale(1.05);
}

.picture-card__link:hover .picture-card__title {
  text-decoration: underline;
}

.picture-card__title {
  color: var(--white);
  font-family: var(--font--primary);
  font-size: 1.625rem;
  line-height: 1.15;
  margin: 0;
}

.picture-card__image {
  overflow: hidden;
  margin-bottom: 0;
}

.picture-card__image img {
  transition: transform 0.2s ease;
}

.picture-card__image::before {
  content: '';
  position: absolute;
  height: 200px;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient(180deg, rgb(0 0 0 / 0%) 0%, #000 67.69%);
  z-index: 2;
}

.picture-card__contents {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  text-align: left;
  display: flex;
  align-items: end;
  padding: 20px;
  z-index: 2;
}
/* ... */

